# Group5

./: .gitignore  Cargo.toml  configuration.txt  log.txt  readme.md
src/: backup.rs  main.rs
ui/: appwindow.slint
